# iDrink_Demo

./: .gitignore  README.md  env.yml  env1_demo.yaml  env2_demo.yml  pyproject.toml  setup.cfg
iDrink_root_example/Default-Files/: IK_Setup_iDrink_OMC_Rajagopal2016.xml  Model_Pose2Sim_Body25_Upper.osim  iDrink_Coco17_UpperBody.osim
iDrink_root_example/Reference_Data/: test1_healthy_reference.csv
iDrink_root_example/Session Data/S240501-1155/S240501-1155_Calibration/: Calib_3.toml  camera_configurations.xlsx
iDrink_root_example/default_files/: AT_Setup.xml  Config_empty.toml  IK_Setup_iDrink_Coco17_UpperBody.xml  IK_Setup_iDrink_OMC_fingers_Rajagopal2016.xml  IK_Setup_iDrink_bml_movi_87.xml  Scaling_Setup_iDrink_Coco17_UpperBody.xml  Scaling_Setup_iDrink_OMC_Rajagopal2016.xml  Scaling_Setup_iDrink_bml_movi_87.xml  _ik_marker_errors.sto  camera_configurations.xlsx  iDrink_Coco17_UpperBody.osim  iDrink_OMC.osim  iDrink_Rajagopal2016_based.osim  iDrink_Rajagopal2016_based_Body25_UpperBody.osim  iDrink_Rajagopal2016_based_Coco18_UpperBody.osim  iDrink_Rajagopal2016_based_OMC.osim  iDrink_Rajagopal2016_based_OMC_finger.osim  iDrink_bml_movi_87.osim
org.llui.idrink_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: __main__.py  iDrinkHub.py  idrink_app.py
src/Pose2Sim/: common.py  poseEstimation.py
src/iDrink/: iDrinkOpenSim.py  iDrinkSetup.py  iDrinkTrial.py  iDrinkVisualInput.py
src/metrics/: Metrics_from_csv.py  Metrics_plotting.py  Metrics_plotting_aio.py  Metrics_plotting_modified_21.py  Reading_files_csv.py  imu.py
(+28 files in other folders)
