[metadata]
name = org.llui.idrink_backend
version = 0.1
url = https://llui.org
author= Johann Ullrich
description = Stroke Rehabilitation Assistant
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    Programming Language :: Python
    Operating System :: POSIX :: Linux
keywords= rehabilitation stroke poseestimation

[options]
packages = idrink_backend
package_dir =
    idrink_backend = src
include_package_data = True

[options.entry_points]
console_scripts =
    idrink_backend = idrink_backend.idrink_app:main
